--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,15 @@
 <resources>
-    <string name="back">Назад</string>
-    <string name="app_name">Заметки</string>
+    <string name="app_name">Мои заметки</string>
+    <string name="btnBack">Назад</string>
+    <string name="about">О программе</string>
+    <string name="exit">Выход</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="note_delete">Удалить</string>
+    <string name="header_title">Заголовок</string>
+
+    <string name="navigation_drawer_open">Открытие</string>
+    <string name="navigation_drawer_close">Зактырие</string>
+
+
 </resources>
